--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,120 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
-.container1{
+@font-face {
+    font-family: 'titulo';
+    src: url(../fonts/DOCALLISME\ ON\ STREET.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'recado';
+    src: url(../fonts/DrawingBlood.ttf) format('truetype');
+}
+
+:root {
+    --degrade: linear-gradient(to left,
+            #ADCD12,
+            #C3CC6F,
+            #F55A86);
+
+    --degradeBrasil: linear-gradient(to left,
+            #FFF100,
+            #002369,
+            #00832D);
+
+    --corTexto: rgb(250, 247, 219);
+}
+
+.container-main {
     height: 80vh;
     width: 100%;
     display: flex;
 }
 
-.imagem-left{
- margin-top: 8vh;
- margin-left: 1vw;
-   
+.imagem-will {
+    position: absolute;
+    width: 48%;
+    margin-top: 3vh;
+    margin-left: 1vw;
+}
+
+.imagem-chris {
+    position: absolute;
+    margin-top: 5vh;
+    margin-left: 37vw;
+    width: 48%;
+}
+
+.introducao {
+    display: flex;
+    width: 60%;
+    height: 100%;
+    margin-left: 22vw;
+    margin-top: 2vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.titulo-introducao {
+    display: flex;
+    font-family: titulo;
+    font-size: 2.3rem;
+    flex-direction: column;
+    margin-top: 8vh;
+    padding: 10px;
+    background-image: var(--degrade);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent
+}
+
+.introducao p {
+    display: flex;
+    margin-top: 5vh;
+    width: 65%;
+    color: var(--corTexto);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* 2° section */
+
+.container-brasil {
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    margin-top: 100vh;
+}
+
+.resumo-brasil {
+    display: flex;
+    width: 60%;
+    height: 100%;
+    margin-left: 6vw;
+    margin-top: 12vh;
+    margin-bottom: 3vh;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    border-radius: 10px ;
+}
+
+.titulo-resumo {
+    display: flex;
+    font-family: titulo;
+    font-size: 2.8rem;
+    flex-direction: column;
+    margin-top: 5vh;
+    margin-left: 2vw;
+    padding: 10px;
+    background-image: var(--degradeBrasil);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent
+}
+
+.resumo-brasil p {
+    color: var(--corTexto);
+    margin-top: 3vh;
+    margin-bottom: 6vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
