--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 * {
-    margin: 0;
-    padding: 0;
+    font-family: "Verdana", cursive;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
+    letter-spacing: 0px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
+    margin: 0;
 }
 :root{
-    --corHeader :#95cd12;
+    --corHeader :#a5c30e;
     --corBottomHeader :#F55A86;
     --corHover :rgb(5, 58, 99);
     --corBranca :#FFF;
+    --border-width: 0.3vh;
+    --border-radius: 2vh;
 }
 
 body {
     font-family: "Manrope", sans-serif;
-    background-color: black;
+    background-color: rgb(225, 225, 225);
 }
 
 header{
     width: 100%;
     z-index: 999;
     background-color: var(--corHeader);
-    border-bottom: 5px solid var(--corBottomHeader);
+    border-bottom: 2.4px solid var(--corBottomHeader);
 }
+
 
 .container{
     display: flex;
@@ -34,21 +42,133 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 28px;
-    width: 28vw;
-    list-style: none;
+    margin-top: 1vh;
+    margin-right: 5vw;
     font-weight: 1000;
+    position: relative;
 }
 
-.menu a{
- color: var(--corBranca);
- cursor: pointer;
- text-decoration: none;
+.menu ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
 }
 
-.menu li a:hover{
-    color: var(--corHover);
-    transition: 0.3s;
+ul li{
+    display: inline-block;
 }
+
+.item-menu {
+    text-decoration: none;
+    letter-spacing: 0.3px;
+    margin-left: 6px;
+    font-size: 0.88rem;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 8px 5px 9px 5px;
+    transition: all 1.4s ease;
+    position: relative;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+
+
+.item-menu:hover {
+    transition: all 1s ease;
+    color: var(--corBottomHeader);
+        height: 2px;
+        width: 0;
+        left: 0px;
+        bottom: -1px;
+        transition: 1s;
+}
+
+.item-menu:before {
+    background-image: url("../assents/svg/lampada.svg");
+    background-size: 100%;
+    height: 29px;
+    width: 40px;
+    top: -25px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    opacity: .8;
+}
+
+.item-menu:hover::before {
+    position: absolute;
+    content: '';
+    animation: imagemLampadinha .4s ease-in-out;
+}
+
+@keyframes imagemLampadinha {
+    0% {
+        opacity: 0;
+        height: 3px;
+        width: 3px;
+        top: 30px;
+    }
+
+    100% {
+        opacity: .8;
+        height: 29px;
+        width: 40px;
+        top: -25px;
+    }
+
+}
+
+/* Footer */
+footer{
+    background-color: rgb(241, 241, 65);
+    border-top: 3px solid blue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.separacao{
+    font-size: 1.4rem;
+    margin-left: 1vw;
+}
+
+.box-superior{ 
+    display: flex;
+    padding: 2vh 0;
+    border-bottom: 1px solid rgb(208, 216, 255);
+}
+
+.mini-box{
+    flex-direction: column;
+    margin-top: 2vh;
+    margin-left: 3vw;
+}
+
+.mini-box p{
+    margin-top: 1vh;
+}
+
+.icon{
+    margin-top: 5vh;
+    margin-left: 1.5vw;
+}
+
+.box-inferior{
+    display: flex;
+    margin-top: 2vh;
+    margin-left: 3vw;
+}
+
+.box-inferior h4{
+    font-size: 0.8rem;
+    margin-bottom: 1vh;
+}
+
+
+
+
+
 
 
