--- a/public/css/index.css
+++ b/public/css/index.css
@@ -84,7 +84,6 @@
 .caixa__card {
     width: 90px;
     height: 100px;
-    background-color: #442222;
     position: absolute;
     display: flex;
     font-weight: bold;
@@ -92,7 +91,6 @@
     align-items: center;
     top: 35px;
     left: 125px;
-    font-size: 9px;
     border-radius: 8px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
     text-align: center;
@@ -107,13 +105,13 @@
 }
 
 .estilizacao-img {
-    width: 90px;
-    height: 100px;
+    width: 95px;
+    height: 105px;
     border-radius: 8px;
 }
 
 .caixa__card:hover {
-    border: solid #4466cc 3px;
+    border: solid #4466cc;
     box-shadow: 0px 0px 10px #4466cc;
 }
 
