--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 * {
     font-family: "Verdana", cursive;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    letter-spacing: 0px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    scroll-behavior: smooth;
     margin: 0;
 }
 :root{
@@ -124,9 +117,9 @@ ul li{
 
 /* Footer */
 footer{
-    background-color: rgb(241, 241, 65);
-    border-top: 3px solid blue;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--corHeader);
+    border-top: 3px solid var(--corBottomHeader);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .separacao{
@@ -153,6 +146,18 @@ footer{
 .icon{
     margin-top: 5vh;
     margin-left: 1.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon img{
+    width: 40px;
+    transition: .4s;
+}
+
+.icon img:hover{
+    width: 45px;
 }
 
 .box-inferior{
@@ -165,10 +170,3 @@ footer{
     font-size: 0.8rem;
     margin-bottom: 1vh;
 }
-
-
-
-
-
-
-
