--- a/public/css/conheca-will.css
+++ b/public/css/conheca-will.css
@@ -198,26 +198,7 @@ header {
     color: var(--rosa);
 }
 
-/* 2°Section - personagens da série */
-.box-titulo{
-    display: flex;
-    width: 60%;
-    height: 7vh;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 3vh;
-}
-
-.titulo-carrossel{
-    display: flex;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    backdrop-filter: blur(12px);
-    border-radius: 5px;
-    color: #F55A86;
-}
-
-/* section final */
+/* section curiosidades */
 .parte-serie{
     display: flex;
     width: 98%;
@@ -296,6 +277,24 @@ header {
 }
 
 /* Carrossel */
+.box-titulo{
+    display: flex;
+    width: 60%;
+    height: 7vh;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 3vh;
+}
+
+.titulo-carrossel{
+    display: flex;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    backdrop-filter: blur(12px);
+    border-radius: 5px;
+    color: #F55A86;
+}
+
 .container-personagens{
     display: flex;
     width: 75%;
@@ -382,8 +381,9 @@ header {
 .botao-cadastro{
     display: inline-block;
     cursor: pointer;
-    margin-left: 1vw;
     padding: 0.1rem 0.4rem;
+    margin-left: 0.5vw;
+    margin-bottom: 1vh;
     border: 1px solid var(--rosa);
     border-radius: 3px;
     color: var(--rosa);
@@ -392,6 +392,10 @@ header {
     text-decoration: none;
     font-weight: bold;
     transition: all .195s ease-in-out;
+}
+
+.botao-cadastro a{
+    text-decoration: none;
 }
 
 .botao-cadastro:hover{
