--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -63,7 +63,7 @@ main {
 
 h2 {
     position: absolute;
-    margin-bottom: 60vh;
+    margin-bottom: 68vh;
     margin-left: 6vw;
     width: 29vw;
     font-size: 1.8rem;
@@ -80,7 +80,7 @@ h2 {
     display: flex;
     width: 100%;
     height: 70vh;
-    margin-top: 10vh;
+    margin-top: 12vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -89,7 +89,7 @@ h2 {
 
 .campo-formulario {
     position: relative;
-    margin-top: 5vh;
+    margin-top: 4vh;
 }
 
 .campo-formulario input {
@@ -132,7 +132,7 @@ h2 {
 }
 
 .btn{
-    margin-top: 7vh;
+    margin-top: 5vh;
     width: 7vw;
     padding: 5px;
     font-size: 1rem;
@@ -147,6 +147,10 @@ h2 {
 }
 
 .atalho{
-    margin-top: 2vh;
+    margin-top: 1vh;
     color: rgb(255, 255, 255);
+}
+
+.combobox{
+    margin-left: 2vw;
 }
